--- a/study/nomadcoin/package.json
+++ b/study/nomadcoin/package.json
@@ -6,5 +6,8 @@
   "repository": "https://github.com/ljh1324/block-chain",
   "author": "jhl",
   "license": "MIT",
-  "private": false
+  "private": false,
+  "dependencies": {
+    "crypto-js": "^3.1.9-1"
+  }
 }
